fixed background gradient z-index

--- a/src/App.scss
+++ b/src/App.scss
@@ -59,6 +59,7 @@ button {
     left: 0;
     right: 0;
     bottom: 0;
+    z-index: 3;
   }
 
   i {
